tests/golden/oidc/oidc/oidc/01_vcluster_helmchart/vcluster/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  labels:
    app: vcluster
    chart: vcluster-0.36.1
    heritage: Helm
    release: oidc
  name: oidc
  namespace: testns
spec:
  rules:
    - host: testcluster.local
      http:
        paths:
          - backend:
              service:
                name: oidc
                port:
                  name: https
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - testcluster.local
      secretName: oidc-tls
